--- a/donation.html
+++ b/donation.html
@@ -9,8 +9,8 @@
     <script>
 document.getElementById("demo").innerHTML = "donation-animations";
 </script>
-    <link rel="stylesheet" href="C:\Users\rimar\OneDrive\Desktop\Sparks\Payment Gateway\css\style.css"/>
-    <link rel="stylesheet" href="C:\Users\rimar\OneDrive\Desktop\Sparks\Payment Gateway\css\donation.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/donation.css"/>
     <title>Donate</title>
 </head>
 
