--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\rimar\OneDrive\Desktop\Sparks\Payment Gateway\css\style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Sparks Foundation</title>
 </head>
