--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <title>Sparks Foundation</title>
 </head>
@@ -22,10 +22,10 @@
                 <div class="line"></div>
             </div>
             <ul class="navlinks">
-                <li><a class="links" href="./index.html">Home</a></li>
-                <li><a class="links" href="./Donation.html">Donate</a></li>
-                <li><a class="links" href="./index.html">Contact</a></li>
-                <li><a class="links" href="./index.html">About</a></li>
+                <li><a class="links" href="/">Home</a></li>
+                <li><a class="links" href="/donation.html">Donate</a></li>
+                <li><a class="links" href="/">Contact</a></li>
+                <li><a class="links" href="/">About</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
     <main>
         <section class="first">
             <h1 class="first-heading animate">Be Proud! <br> As you are making change!! </h1>
-            <a id="donate" href="./Donation.html">
+            <a id="donate" href="/donation.html">
                 DONATE NOW
             </a>
         </section>
