--- a/donation.html
+++ b/donation.html
@@ -9,8 +9,8 @@
     <script>
 document.getElementById("demo").innerHTML = "donation-animations";
 </script>
-    <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/donation.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="donation.css"/>
     <title>Donate</title>
 </head>
 
@@ -35,7 +35,7 @@ document.getElementById("demo").innerHTML = "donation-animations";
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha512-0xrMWUXzEAc+VY7k48pWd5YT6ig03p4KARKxs4Bqxb9atrcn2fV41fWs+YXTKb8lD2sbPAmZMjKENiyzM/Gagw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" crossorigin="anonymous"></script>
-    <script src="C:\Users\rimar\OneDrive\Desktop\Sparks\Payment Gateway\js\donation_animation.js"></script>
+    <script src="donation_animation.js"></script>
     
 
 </body>
