--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="donation.css">
+
 
     <title>Sparks Foundation</title>
 </head>
@@ -22,10 +24,10 @@
                 <div class="line"></div>
             </div>
             <ul class="navlinks">
-                <li><a class="links" href="./index.html">Home</a></li>
-                <li><a class="links" href="./donation.html">Donate</a></li>
-                <li><a class="links" href="./index.html">Contact</a></li>
-                <li><a class="links" href="./index.html">About</a></li>
+                <li><a class="links" href="index.html">Home</a></li>
+                <li><a class="links" href="donation.html">Donate</a></li>
+                <li><a class="links" href="index.html">Contact</a></li>
+                <li><a class="links" href="index.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -33,15 +35,15 @@
     <main>
         <section class="first">
             <h1 class="first-heading animate">Be Proud! <br> As you are making change!! </h1>
-            <a id="donate" href="./donation.html">
+            <a id="donate" href="donation.html">
                 DONATE NOW
             </a>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha512-0xrMWUXzEAc+VY7k48pWd5YT6ig03p4KARKxs4Bqxb9atrcn2fV41fWs+YXTKb8lD2sbPAmZMjKENiyzM/Gagw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" crossorigin="anonymous"></script>
-    <script src="../js/ham-animation.js"></script>
-    <script src="../js/homepage-animations.js"></script>
+    <script src="ham-animation.js"></script>
+    <script src="homepage-animations.js"></script>
 </body>
 
 </html>
